--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,7 +16,7 @@
         </div>
         <div class="total">
           <ion-icon name="calculator"></ion-icon>
-          <span class="total-lista">${{ lista.total }}</span>
+          <span class="total-lista">{{ lista.total.parsed }}</span>
         </div>
         <div class="date">
           <ion-icon name="calendar"></ion-icon>
