--- a/src/pages/lista/lista.html
+++ b/src/pages/lista/lista.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the ListaPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar color="primary">
     <ion-title>{{ lista.title }}</ion-title>
@@ -12,8 +6,7 @@
             <ion-icon name="trash" margin-left></ion-icon>
         </button>
         <button ion-button class="button-header" color="secondary" (click)="editarLista()">
-          Edit
-          <!-- <ion-icon name="build" margin-left></ion-icon> -->
+          Editar
         </button>
     </ion-buttons>
   </ion-navbar>
@@ -26,7 +19,9 @@
         <th scope="col">#</th>
         <th scope="col">Nombre</th>
         <th scope="col">Cantidad</th>
-        <th scope="col">Precio</th>
+        <th scope="col" (click)="mostarItemTotal = !mostarItemTotal" class="precio">
+          Precio ({{ mostarItemTotal ? 'total' : 'c/u' }})
+        </th>
       </tr>
     </thead>
     <tbody>    
@@ -34,14 +29,15 @@
         <th>{{ i + 1 }}</th>
         <th>{{ item.name }}</th>
         <th>{{ item.amount }}</th>
-        <th>${{ item.price }}</th>
+        <th *ngIf="!mostarItemTotal;else precio_total">{{ item.price.parsed }}</th>
+        <ng-template #precio_total><th>{{ item.totalPriceItem.parsed }}</th></ng-template>
       </tr>
 
       <tr class="total">
         <th>Total</th>
         <th></th>
         <th></th>
-        <th>${{ lista.total }}</th>
+        <th>{{ lista.total.parsed }}</th>
       </tr>
     </tbody>
   </table>
